update lecture notes, additional steps to validate jupyter notebook setup

--- a/lectures/Lecture06-Jupyter-Notes.ipynb
+++ b/lectures/Lecture06-Jupyter-Notes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a1e835f8",
+   "id": "15c01f7b",
    "metadata": {},
    "source": [
     "# Introduction to Jupyter Notebooks\n",
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41f77dae",
+   "id": "c6c505b0",
    "metadata": {},
    "source": [
     "## Editing\n",
@@ -23,7 +23,7 @@
     "-  move up / down between cells `arrow up`/`arrow down` or `j`/`k`\n",
     "- 'up', 'down' arrows in menu shift cell order\n",
     "- add new cell below current cell `b`\n",
-    "- add new cell below current cell `a`\n",
+    "- add new cell above current cell `a`\n",
     "- delete current cell `x` or `dd`\n",
     "\n",
     "### Markdown\n",
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8dcde634",
+   "id": "5db3861e",
    "metadata": {},
    "source": [
     "## Cell types\n",
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dab46b25",
+   "id": "5cb0401f",
    "metadata": {},
    "source": [
     "## Running cells\n",
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75f71017",
+   "id": "848298f9",
    "metadata": {},
    "source": [
     "# Data Science with Jupyter Notebook\n",
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b092236",
+   "id": "c742ca13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,27 @@
   },
   {
    "cell_type": "markdown",
-   "id": "330152fb",
+   "id": "ed305c49",
+   "metadata": {},
+   "source": [
+    "## Experiment with the above cell and create different charts\n",
+    "\n",
+    "For example:\n",
+    "- using squares\n",
+    "- the points are red"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c00d768",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86c51ba2",
    "metadata": {},
    "source": [
     "## Loading Datasets into Pandas\n",
@@ -125,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a233086b",
+   "id": "935a8b15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,8 +155,71 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4eb11f76",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "07aaba58",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
-   "id": "f40bcee6",
+   "id": "4316bf86",
+   "metadata": {},
+   "source": [
+    "## Checking the notebook's working directory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35bdc330",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "31a05079",
+   "metadata": {},
+   "source": [
+    "### Change working directory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "798b4bd4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.chdir('/home/pi/workspace/labs')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37209217",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b35eba5",
    "metadata": {},
    "source": [
     "## Titanic dataset"
@@ -144,48 +227,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "5a8f8221",
+   "execution_count": null,
+   "id": "ecd58535",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
-      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 60302  100 60302    0     0   340k      0 --:--:-- --:--:-- --:--:--  340k\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# run curl at command line to download local version of titanic.csv\n",
     "!curl https://raw.githubusercontent.com/pandas-dev/pandas/main/doc/data/titanic.csv --output titanic.csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "18696ac1",
+   "execution_count": null,
+   "id": "e721d08b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "PassengerId,Survived,Pclass,Name,Sex,Age,SibSp,Parch,Ticket,Fare,Cabin,Embarked\r\n",
-      "1,0,3,\"Braund, Mr. Owen Harris\",male,22,1,0,A/5 21171,7.25,,S\r\n",
-      "2,1,1,\"Cumings, Mrs. John Bradley (Florence Briggs Thayer)\",female,38,1,0,PC 17599,71.2833,C85,C\r\n",
-      "3,1,3,\"Heikkinen, Miss. Laina\",female,26,0,0,STON/O2. 3101282,7.925,,S\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!head -n 4 titanic.csv # show first 4 lines of file"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f2ae019f",
+   "id": "4ca8e083",
    "metadata": {},
    "source": [
     "## AAPL stock dataset\n"
@@ -193,8 +256,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "60225a25",
+   "execution_count": null,
+   "id": "e301c1ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b0bd835",
+   "id": "22feafaf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,14 +281,48 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18b35911",
+   "id": "77a5397e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "aapl_stock[:2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12846b98",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pandas dataframe constructor https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.html\n",
+    "\n",
+    "df = pd.DataFrame(aapl_stock, columns=['date','close_price','volume','open','high','low'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c9e2e995",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a3bd9f29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.head(3)"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "05a93d14",
+   "id": "eb0fabee",
    "metadata": {},
    "source": [
     "# Understanding DataFrame Objects\n",
@@ -236,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e8dd0e8",
+   "id": "64daec7b",
    "metadata": {
     "scrolled": true
    },
@@ -246,81 +343,89 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "b02f3fbd",
-   "metadata": {},
-   "source": [
-    "# Accessing DataFrame and Series Objects\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1593a198",
-   "metadata": {},
-   "source": [
-    "# Working with Data in Pandas"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2263e015",
-   "metadata": {},
-   "source": [
-    "# Reading and Writing Data in Pandas\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "01798ffe",
-   "metadata": {},
-   "source": [
-    "# Select subset of data\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bcd69d6e",
-   "metadata": {},
-   "source": [
-    "# Create new columns of data\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "69ae2542",
-   "metadata": {},
-   "source": [
-    "# Calculate summary statistics\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7d5d8319",
-   "metadata": {},
-   "source": [
-    "# Manipulating Text Data"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac2d06ed",
+   "id": "d1dca84b",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "9c06bdcb",
+   "metadata": {},
+   "source": [
+    "# Reading and Writing Data in Pandas\n",
+    "\n",
+    "https://pandas.pydata.org/docs/getting_started/intro_tutorials/02_read_write.html"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "398c3365",
+   "id": "eed6582f",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "319227b4",
+   "metadata": {},
+   "source": [
+    "# Select subset of data\n",
+    "\n",
+    "https://pandas.pydata.org/docs/getting_started/intro_tutorials/03_subset_data.html"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6429058",
+   "id": "a13cdd98",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3aafb0a8",
+   "metadata": {},
+   "source": [
+    "# Create new columns of data\n",
+    "\n",
+    "https://pandas.pydata.org/docs/getting_started/intro_tutorials/05_add_columns.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae2c4870",
+   "metadata": {},
+   "source": [
+    "# Calculate summary statistics\n",
+    "https://pandas.pydata.org/docs/getting_started/intro_tutorials/06_calculate_statistics.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4da1c7e2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "94b3ae05",
+   "metadata": {},
+   "source": [
+    "# Manipulating Text Data\n",
+    "https://pandas.pydata.org/docs/getting_started/intro_tutorials/10_text_data.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aed8b22e",
    "metadata": {},
    "outputs": [],
    "source": []
