--- a/labs/Lab05-Jupyter-and-Pandas.ipynb
+++ b/labs/Lab05-Jupyter-and-Pandas.ipynb
@@ -15,13 +15,13 @@
     "    1. Tip: open the links from your PC's browser to reduce memory usage by the Pi\n",
     "1. Copy and run the code from the tutorials and run them in this notebook\n",
     "\n",
-    "Tip #2: refer to `Lecture06-Jupyter-Notes.ipynb` in the course repository for instructions adding and running cells in Jupyter\n",
+    "Tip #2: refer to `Lecture05-Jupyter-Notes.ipynb` in the course repository for instructions adding and running cells in Jupyter\n",
     "\n",
     "Tip #3: the first 4 code cells from the first two tutorials has been recreated for you.  Do the same for the remaining cells for the tutorial in each section\n",
     "\n",
     "## Code Demonstration\n",
     "\n",
-    "1. Show you have run all the code from the 6 tutorials\n",
+    "1. Show you have read, understood, and have run all the code from the 6 tutorials\n",
     "1. Be prepared to answer questions about the tutorial code\n",
     "1. You will be required to fix broken code when you perform the demonstration\n",
     "\n"
@@ -262,6 +262,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "32fd5a65",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c194ef9",
    "metadata": {},
    "outputs": [],
    "source": []
