revise (1) Lab 5 instructions and .ipynb (2) revise Tips and Tricks -> git repo update instructions

--- a/labs/Lab05-Jupyter-and-Pandas.ipynb
+++ b/labs/Lab05-Jupyter-and-Pandas.ipynb
@@ -13,11 +13,11 @@
     "1. Run the first three code cells below to show your current directory, retrieve and display the Titanic dataset locally\n",
     "1. Read and work through the code in the tutorials linked below\n",
     "    1. Tip: open the links from your PC's browser to reduce memory usage by the Pi\n",
-    "1. Copy and run the code from the tutorials and run them in this notebook\n",
+    "1. Run the code from the tutorials and run them in this notebook by creating additional code cells\n",
     "\n",
-    "Tip #2: refer to `Lecture05-Jupyter-Notes.ipynb` in the course repository for instructions adding and running cells in Jupyter\n",
+    "Tip #2: refer to [Lecture06-Jupyter-Notes.ipynb](https://github.com/dora-lee/seneca-prg550-2022-spring/blob/main/lectures/Lecture06-Jupyter-Notes.ipynb) in the course repository for instructions adding and running cells in Jupyter\n",
     "\n",
-    "Tip #3: the first 4 code cells from the first two tutorials has been recreated for you.  Do the same for the remaining cells for the tutorial in each section\n",
+    "Tip #3: the first 4 code cells from the first two tutorials has been recreated for you.  \n",
     "\n",
     "## Code Demonstration\n",
     "\n",
